--- a/src/css/index.css
+++ b/src/css/index.css
@@ -252,11 +252,15 @@
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
     padding: 20px;
     position: relative;
-    width: 80%;
-    height: 60%;
+    width: 90%;
+    height: 90%;
     max-width: 90%;
     text-align: center;
     border: orange solid;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .modal-close {
@@ -284,6 +288,7 @@
     padding: 40px;
     width: 400px;
     opacity: 0.2;
+    transform: scale(0.7);
 }
 
 .modal_avatar_active {
@@ -292,6 +297,7 @@
     padding: 40px;
     width: 400px;
     opacity: 1;
+    transform: scale(1);
 }
 
 .avatars{
@@ -318,12 +324,25 @@
 }
 
 .modal_timer{
-    font-size: 120px;
+    font-size: 60px;
     font-family: 'Starting Machine';
     background-color: rgb(70, 13, 13);
-    padding: 20px;
+    padding: 10px;
     border-radius: 10px;
     border: red solid;
     margin-top: 50px;
     color: white;
+    width: 30%;
+    margin-top: -15px;
+}
+
+.modal_question{
+    font-size: 80px;
+    font-family: 'Vexler Slip';
+    background-color: rgba(70, 36, 13, 1);
+    padding: 20px;
+    border-radius: 10px;
+    border: orange solid;
+    margin-top: 50px;
+    color: rgb(224, 196, 175);
 }
