nowy logika gry

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,5 +1,5 @@
 :root {
-    color: orange;
+    color: #ffa500;
     background-image: url('https://cdn.suwalls.com/wallpapers/holidays/dark-halloween-pattern-49196-3840x2160.jpg');
     background-size: cover;
     background-repeat: no-repeat;
