--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,3 +1,5 @@
+@import './multiplayer.css';
+
 :root {
     color: #ffa500;
     background-image: url('https://cdn.suwalls.com/wallpapers/holidays/dark-halloween-pattern-49196-3840x2160.jpg');
